[package]
name = "basic-js"
version = "0.1.0"
edition = "2021"

# Standalone rs-grid example — vanilla JS / wasm-pack library mode.
# Exposes a `JsGrid` class; the host page owns the surrounding HTML.
# Depends on the rs-grid library via git tag (see README for build steps).
# The crate name stays `basic-js` so wasm-pack emits `basic_js.{js,wasm}`.

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-grid-core   = { git = "https://github.com/ruxelion/rs-grid", tag = "rs-grid-core-v0.1.3" }
rs-grid-web    = { git = "https://github.com/ruxelion/rs-grid", tag = "rs-grid-core-v0.1.3" }
example-common = { git = "https://github.com/ruxelion/rs-grid", tag = "rs-grid-core-v0.1.3" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "HtmlDocument",
  "Element",
  "EventTarget",
  "MouseEvent",
  "MouseEventInit",
  "WheelEvent",
  "DomRect",
  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "KeyboardEvent",
  "Navigator",
  "Clipboard",
  "HtmlTextAreaElement",
  "HtmlBodyElement",
  "console",
  "ClipboardEvent",
  "DataTransfer",
  "CssStyleDeclaration",
  "HtmlElement",
  "HtmlImageElement",
  "AddEventListenerOptions",
  "Node",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "UiEvent",
  "FocusEvent",
  "FileList",
  "File",
  "FileReader",
  "Storage",
  "TextMetrics",
]
